# pydantic-config-mgmt-template

./: .gitignore  CHANGELOG.md  CLAUDE.md  Makefile  README.md  config.yaml.example  justfile  pyproject.toml  tox.ini
.github/workflows/: release.yml
src/: main.py
src/config/: __init__.py
src/config/helpers/: aws_secrets.py  base.py  bool_parser.py  config_exporter.py  config_parser.py  get_project_basedir.py  logging_setup.py
src/config/models/: aws.py  consolidated.py  db.py  logging.py  lookup_files.py
src/utils/: logging_helpers.py  pydantic_aws_secrets_mgr.py
tests/: conftest.py  test_config_generation.py  test_config_precedence.py  test_sensitive_data.py
