[project]
name = "pydantic-config"
version = "0.1.0"
description = "An opinionated template for configuration management using pydantic lib"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "ruamel-yaml==0.*,>=0.18",
    # Logging
    "python-json-logger>=3.3.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-env>=1.1.0",
    "tox>=4.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["-v", "--tb=short"]
filterwarnings = [
    "ignore::UserWarning:pydantic_settings.*",
]
